--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,11 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -80,6 +81,7 @@ hr {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
