--- a/css/styles.css
+++ b/css/styles.css
@@ -6075,7 +6075,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #649EB9 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
